# vlttng

./: LICENSE  README.adoc  pyproject.toml  setup.py
doc/man/: Makefile  asciidoc.conf  vlttng-quick.1  vlttng-quick.1.txt  vlttng.1  vlttng.1.txt
doc/man/xsl/: manpage.xsl
tools/: create_profiles.py
vlttng/: __init__.py  activate_template.py  build_template.py  cli.py  conf_template.py  install_template.py  profile.py  update_template.py  utils.py  venv.py  vlttng_cli.py  vlttng_quick_cli.py
vlttng/profiles/: all-master.yml  babeltrace-1.0.0-pre2.yml  babeltrace-1.0.0-pre3.yml  babeltrace-1.0.0-pre4.yml  babeltrace-1.0.0-rc1.yml  babeltrace-1.0.0-rc2.yml  babeltrace-1.0.0-rc3.yml  babeltrace-1.0.0-rc4.yml  babeltrace-1.0.0-rc5.yml  babeltrace-1.0.0-rc6.yml  babeltrace-1.0.0.yml  babeltrace-1.0.1.yml  babeltrace-1.0.2.yml  babeltrace-1.0.3.yml  babeltrace-1.1.0.yml  babeltrace-1.1.1.yml  babeltrace-1.1.2.yml  babeltrace-1.2.0-rc1.yml  babeltrace-1.2.0-rc2.yml  babeltrace-1.2.0.yml  babeltrace-1.2.1.yml  babeltrace-1.2.2.yml  babeltrace-1.2.3.yml  babeltrace-1.2.4.yml  babeltrace-1.2.5.yml  babeltrace-1.2.6.yml  babeltrace-1.3.0.yml  babeltrace-1.3.1.yml  babeltrace-1.3.2.yml  babeltrace-1.3.3.yml  babeltrace-1.4.0-rc1.yml  babeltrace-1.4.0.yml  babeltrace-1.4.1.yml  babeltrace-1.4.2.yml  babeltrace-1.4.3.yml  babeltrace-1.4.4.yml  babeltrace-1.5.0-rc1.yml  babeltrace-1.5.0.yml  babeltrace-1.5.1.yml  babeltrace-1.5.10.yml  (+1365 more)
